Fixing recommendation by IDE